--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,12 @@ permissions: write-all
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
       - uses: actions/checkout@v3
       - uses: iterative/setup-cml@v2
       - name: Install Packages
-        run: make install
+        run: ./make install
       - name: Format
         run: make format
       - name: Train
