--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: iterative/setup-cml@v2
       - name: Install Packages
-        run: ./make install
+        run: make install
       - name: Format
         run: make format
       - name: Train
